[package]
name = "egui-gizmo"
version = "0.7.0"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"

license-file = "LICENSE"
readme = "README.md"
description = "3d transform gizmo for the egui library"
homepage = "https://github.com/urholaukkarinen/egui-gizmo"
repository = "https://github.com/urholaukkarinen/egui-gizmo"
categories = ["gui", "game-development", "game-engines"]
keywords = ["egui", "3d", "gizmo"]

[workspace]
# members = ["demo"]
members = []

[dependencies]
egui = { git = "https://github.com/emilk/egui", default-features = false }
glam = "0.21.3"

[profile.release]
opt-level = 2
